--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -86,3 +86,81 @@ a {
 	color: white;
 	text-decoration: none;
 }
+
+#product_grid {
+	display: flex;
+	justify-content: space-between;
+	margin-top: 3rem;
+	width: 100%;
+
+}
+
+#product_grid p {
+	background-color: black;
+	text-align: center;
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
+}
+
+#product_grid img {
+	align-self: center;
+	margin: 2rem;
+	width: 9rem;
+
+}
+
+.main {
+	display: flex;
+	justify-content: center;
+}
+
+.item {
+	border: 4px solid black;
+	width: 30%;
+}
+
+.box {
+	height: 13rem;
+	display: flex;
+	justify-content: center;
+}
+
+#details {
+	margin-top: 3rem;
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+}
+
+.detail_box {
+	width: 35%;
+}
+
+.detail_box .top {
+	padding-left: 2rem;
+	padding-bottom: 1rem;
+	padding-top: 1rem;
+	background-color: black;
+}
+
+.detail_box .bottom {
+	padding-left: 2rem;
+	color: black;
+}
+
+.main .container {
+	flex-direction: column;
+}
+
+footer {
+	margin-top: 4rem;
+	height: 5rem;
+	display: flex;
+	justify-content: center;
+	background-color: black;
+}
+
+footer p {
+	text-align: left;
+	align-self: center;
+}
